--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/littlestbrother/pretendr#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "socket.io": "^4.2.0"
