--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pretendr",
   "version": "1.0.0",
   "description": "a web based group chat text rpg",
-  "main": "index.js",
+  "main": "scripts.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
